# webUtils

./: .gitignore  Dockerfile  README.md  app.py  app.yaml  pyproject.toml  requirements.txt  tmdb.py
chrome/: background.js  manifest.json
chrome/extensions/: background.js  manifest.json  popup.html  popup.js
chrome/extensions/markdown1/: bg.js  manifest.json  popup.js  style.css
chrome/extensions/markdown2/: bg.js  content.js  inject.html  manifest.json  style.css
src/webutils/: app.py  tmdb.py
