[tool.poetry]
name = "webutils"
version = "0.1.0"
description = ""
authors = ["Suhail <suhailece@gmail.com>"]
readme = "README.md"
packages = [{include = "webutils", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
